--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <div th:fragment="footer">
-    footer 영역 입니다.
+    <footer class="page-footer font-small cyan darken-3">
+        <div class="footer-copyright text-center py-3">Thymeleaf Shopping Mall Example Website</div>
+    </footer>
 </div>
 </html>
