--- a/src/main/resources/templates/layouts/layout1.html
+++ b/src/main/resources/templates/layouts/layout1.html
@@ -8,6 +8,7 @@
 
     <!--css-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link th:href="@{/css/layout1.css}" rel="stylesheet">
 
     <!--js, jquery and popper.js-->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
