--- a/src/main/resources/templates/member/memberForm.html
+++ b/src/main/resources/templates/member/memberForm.html
@@ -35,12 +35,12 @@
             </div>
             <div class="form-group">
                 <label th:for="password">비밀번호</label>
-                <input type="email" th:field="*{password}" class="form-control" placeholder="비밀번호 입력">
+                <input type="password" th:field="*{password}" class="form-control" placeholder="비밀번호 입력">
                 <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="fieldError">Incorrect data</p>
             </div>
             <div class="form-group">
                 <label th:for="address">주소</label>
-                <input type="email" th:field="*{address}" class="form-control" placeholder="주소를 입력해주세요">
+                <input type="text" th:field="*{address}" class="form-control" placeholder="주소를 입력해주세요">
                 <p th:if="${#fields.hasErrors('address')}" th:errors="*{address}" class="fieldError">Incorrect data</p>
             </div>
             <div style="text-align: center">
